# autotyping

./: .gitignore  .libcst.codemod.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
autotyper/: __main__.py  autotype.py
autotyper/codemods/: autotype.py
autotyping/: __main__.py  autotyping.py  guess_type.py  guess_type_from_argname.py
tests/: test_codemod.py
