[project]
name = "autotyping"
version = "24.9.0"
description = "A tool for autoadding simple type annotations."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Jelle Zijlstra", email = "jelle.zijlstra@gmail.com" },
]
keywords = [
    "annotations",
    "typing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "libcst",
    "typing-extensions",
]

[project.scripts]
autotyping = "autotyping.__main__:main"

[project.urls]
"Bug Tracker" = "https://github.com/JelleZijlstra/autotyping/issues"
Homepage = "https://github.com/JelleZijlstra/autotyping"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target_version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

exclude = '''
/(
    \.git
  | \.tox
  | \.venv
)/
'''
preview = true
skip_magic_trailing_comma = true

[tool.pyanalyze]
missing_parameter_annotation = true
missing_return_annotation = true
incompatible_override = true
